Improved proof of Plancherel.

--- a/folland-exercises.tex
+++ b/folland-exercises.tex
@@ -2154,6 +2154,12 @@ This says that the dual functor $(-)^* \colon \catNor \to \catNor$ sends product
 	proving the claim.
 
 	\begin{displaytheorem}
+		$L^1 \intersect L^2$ is dense in $L^2$.
+	\end{displaytheorem}
+	%
+	Let $f \in L^2$, and let $f_n = f \indicator{[-n,n]}$. Then $f_n \in L^1 \intersect L^2$, and $f_n \to f$ pointwise. By the dominated convergence theorem $f_n$ also converges to $f$ in $L^2$.
+
+	\begin{displaytheorem}
 		Let $Y = \set{\hat{f}}{f \in L^1 \intersect L^2}$. Then $Y$ is dense in $L^2$.
 	\end{displaytheorem}
 	%
